# pewpew

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .gitmodules  README.md  _importer.py  collect_icons.py  genindex.html  gui.py  icons.py  icons.qrc  index.html  install.html  laserplot.py  objects.inv  pewpew.debug.spec  pewpew.py  pewpew.spec  pyproject.toml  qt.py  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  usage.html  wx.py
.github/workflows/: build_docs.yml  debug_release.yml  release_mac.yml  release_windows.yml
_sources/: install.rst.txt  usage.rst.txt
_sources/dialogs/: colocal.rst.txt  import.rst.txt
_sources/examples/: calculator.rst.txt
_sources/tools/: calculator.rst.txt  drift.rst.txt  filter.rst.txt  (+2 more)
dialogs/: calibration.html  colocal.html  import.html  selection.html  stats.html
docs/: conf.py  index.rst  install.rst  usage.rst
examples/: calculator.html  drift.html  filter.html  import.html  overlay.html  standards.html  stats.html
gui/: __dialogs.py  batchnotebook.py  calibration.py  canvas.py  dialogs.py  dockarea.py  docks.py  events.py  image.npy  imagedock.py  krisskrosswizard.py  lasernotebook.py  mainwindow.py  plotnotebook.py  plotpanel.py  tabbeddocks.py  tools.py  validators.py  widgets.py  windows.py  wizards.py  workbook.py
lib/: exporter.py  formatter.py  importer.py  laser.py  plotimage.py
pewpew/: __init__.py  __main__.py  actions.py  app.py  events.py  help.py  icons.py  log.py  main.py  mainwindow.py  models.py  pewpew.py  threads.py  todo.md  validators.py
scripts/: collect_icons.py  colormap_to_table.py  icon.qrc  icons.qrc
src/: .ccls  polyextmodule.c
tests/: funcs.py  test_calc.py  test_canvas.py  test_charts.py  test_colocal.py  test_convolve.py  test_dialogs.py  test_docks.py  test_events.py  test_export_dialogs.py  test_filters.py  test_io.py  test_kmeans.py  test_laser.py  test_laser_widget.py  test_main_window.py  test_model_views.py  test_models.py  test_mpl_tools.py  test_mpl_widgets.py  test_numpyqt.py  test_parser.py  test_pewpew_calc.py  test_pewpew_io.py  test_threads.py  test_tool_edit.py  test_tool_overlay.py  test_tool_standards.py  test_tool_widget.py  test_tools.py  test_validators.py  test_views.py  test_wizard_import.py  test_wizard_import_laser.py  test_wizard_import_options.py  test_wizard_srr.py  test_wizards.py  testing.py
tools/: calculator.html  drift.html  filter.html  overlay.html  standards.html
tutorials/: calculator.html  calibration.html  colocal.html  drift.html  filter.html  import.html  selection.html  stats.html
util/: calc.py  colormaps.py  exceptions.py  exporter.py  formatter.py  importer.py  importers.py  krisskross.py  laser.py  laserfig.py  laserimage.py  plothelpers.py  plotimage.py
(+289 files in other folders)
