[build-system]
requires = ["setuptools", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pewpew"
version = "1.7.1"
dependencies = [
    "numpy>=1.22",
    "pewlib>=0.10.1",
    "pyqtgraph",
    "PySide6",
]
description = "GUI for visualisation and manipulation of LA-ICP-MS data."
readme = "README.md"
requires-python = ">= 3.9"
license = {file = "LICENSE"}
authors = [{name = "Thomas Lockwood", email = "thomas.lockwood@uts.edu.au"}]

[project.optional-dependencies]
tests = ["pytest", "pytest-qt"]

[project.urls]
Repository = "https://gtihub.com/djdt/pewpew"
Documentation = "https://pew2.readthedocs.io"
Publication = "https://doi.org/10.1021/acs.analchem.1c02138"

[project.scripts]
pewpew = "pewpew.__main__:main"

[tool.pytest.ini_options]
filterwarnings = [
    # https://github.com/pytest-dev/pytest-qt/issues/558
    "ignore:Failed to disconnect .* from signal:RuntimeWarning",
]
