[build-system]
requires = ["setuptools", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pewpew"
version = "1.7.5"
dependencies = [
    "numpy>=1.22",
    "pewlib>=0.10.3",
    "pyqtgraph",
    "PySide6!=6.9.1",
    "ckwrap==1.2.3",
]
description = "GUI for visualisation and manipulation of LA-ICP-MS data."
readme = "README.md"
requires-python = ">= 3.9"
license = {file = "LICENSE"}
authors = [{name = "Thomas Lockwood", email = "thomas.lockwood@uts.edu.au"}]

[project.optional-dependencies]
tests = ["pytest", "pytest-qt"]

[project.urls]
Repository = "https://gtihub.com/djdt/pewpew"
Documentation = "https://pew2.readthedocs.io"
Publication = "https://doi.org/10.1021/acs.analchem.1c02138"

[project.scripts]
pewpew = "pewpew.__main__:main"

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
filterwarnings = [
    # https://github.com/pytest-dev/pytest-qt/issues/558
    "ignore:Failed to disconnect .* from signal:RuntimeWarning",
]
